# qtcreator-fortran

./: .gitignore  LICENSE  README.md
generic-highlighter/: fortran.xml
generic-highlighter/syntax/: fortran.xml
installer/: qtcreator-fortran.iss
templates/wizards/files/fortdt/: module.f90  wizard.json
templates/wizards/files/fortmodule/: module.f90  wizard.json
templates/wizards/files/fortsource/: wizard.json
templates/wizards/projects/extmod/: CMakeLists.txt  extmodule_const.f90  extmodule_impl.f90  extmodule_intf.f90  wizard.json
templates/wizards/projects/plainfor/: CMakeLists.txt  main.f90  wizard.json
